# transplant-gcp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ALL_SYSTEMS_GO.md  CHANGELOG.md  Makefile  README.md  RUN_TESTS.md  START_HERE.md  WAKE_UP_README.md  claude.md  deploy.sh  netlify.toml  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties  test_adk_api.py  todo.md
.claude/: settings.local.json
.claude/commands/: resume-session.md
.claude/commands/python/: StartOfTheDay.md  WrapUpForTheDay.md
.github/: dependabot.yml
.github/workflows/: ci.yml  close-the-loop.yml  codeql.yml  security.yml  sonarcloud.yml
benchmarks/: adk_results.json  inprocess_results.json  pubsub_results.json
data/srtr/: SRTR_DATA_SUMMARY.md
demo/: index.html
docs/: DEMO_VIDEO_SCRIPT.md  DEVPOST_COMPLETE_SUBMISSION.md  DEVPOST_SUBMISSION_INFO.md  FINAL_SUBMISSION_CHECKLIST.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_SUMMARY.md  PRE-SUBMISSION_TESTING.md  PUBSUB_SETUP.md  SUBMISSION_CHECKLIST.md  WRAP-UP-2025-10-26.md  blog-post.md  linkedin-post.md
docs/ai-docs/: create-adr.md  create-prd.md  generate-tasks.md  process-task-list.md
docs/architecture/: adk-orchestration.md  adk-research.md  inprocess-communication.md  pubsub-communication.md  system-architecture.md
docs/architecture/comparison/: comparison-template.md
docs/development/: task-3.0-architecture-comparison.md
docs/features/adk-multi-agent-migration-PLANNED/: prd.md  status.md  tasks.md
docs/features/honeycomb-observability-PLANNED/: prd.md  status.md  tasks.md
docs/installation/: adk-setup.md  dependency-conflict-workaround.md
docs/testing/: cloud-run-test-results.md
scripts/: benchmark_adk.py  benchmark_inprocess.py  benchmark_pubsub.py  create_pubsub_topics.py  load_srtr_to_firestore.py  parse_all_organs_parallel.sh  parse_srtr_data.py  parse_srtr_data_v2.py  setup_pubsub_emulator.sh  test_gemini.py  test_multi_organ_query.py  test_srtr_query.py  verify_adk_installation.py
services/: __init__.py  gemini_client.py
services/agents/: __init__.py  coordinator_agent.py  drug_interaction_agent.py  medication_advisor_agent.py  parameter_extractor.py  rejection_risk_agent.py  response_parser.py  symptom_monitor_agent.py  test_agent.py
services/config/: __init__.py  adk_config.py
services/data/: srtr_outcomes.py
services/missed-dose/: .dockerignore  Dockerfile  gemini_client.py  main.py  requirements.txt
services/missed-dose/services/: __init__.py  drug_interaction_agent.py
services/missed-dose/services/agents/: base_adk_agent.py  drug_interaction_agent.py  medication_advisor_agent.py  response_parser.py
services/missed-dose/services/config/: adk_config.py
services/missed-dose/static/css/: styles.css
services/missed-dose/templates/: index.html
services/orchestration/: __init__.py  adk_orchestrator.py  conversation_manager.py
services/pubsub/: __init__.py  coordinator_publisher.py  mock_agents.py  response_aggregator.py  specialist_subscribers.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_adk_orchestration.py  test_cloud_run_deployment.py  test_inprocess_communication.py  test_pubsub_communication.py  test_pubsub_error_handling.py
tests/unit/: test_adk_config.py  test_adk_orchestrator.py  test_conversation_manager.py
tests/unit/agents/: __init__.py  test_base_adk_agent.py  test_coordinator_agent.py  test_coordinator_coverage.py  test_drug_interaction_agent.py  test_drug_interaction_parse.py  test_medication_advisor_agent.py  test_rejection_risk_agent.py  test_response_parser.py  test_response_parser_edges.py  test_srtr_exception_paths.py  test_symptom_monitor_agent.py
tests/unit/data/: test_srtr_graft_survival.py  test_srtr_outcomes.py
tests/unit/pubsub/: test_coordinator_publisher.py  test_mock_agents.py  test_response_aggregator.py  test_response_aggregator_wait.py  test_specialist_subscribers.py  test_standalone_callbacks.py
